Broken Link dark mode issue fixing

--- a/assets/scss/components/_broken-links.scss
+++ b/assets/scss/components/_broken-links.scss
@@ -496,7 +496,7 @@
 			display: none;
 		}
 		span {
-			padding: 3px 6px;
+			padding: 10px 10px;
 			display: inline-block;
 			border: 1px solid #e7e7e7;
 			border-right: none;
